--- a/Report/ExtentReport.html
+++ b/Report/ExtentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Automation Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jan 23, 2023 10:35:15 PM</span></a>
+<a href="#"><span class="badge badge-primary">Jan 30, 2023 10:42:10 AM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">locations</p>
             <p class="text-sm">
-              <span>10:35:30 PM</span> / <span>00:00:02:214</span>
+              <span>10:42:18 AM</span> / <span>00:00:01:863</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">locations</h5>
-<span class='badge badge-success'>01.23.2023 10:35:30 PM</span>
-<span class='badge badge-danger'>01.23.2023 10:35:33 PM</span>
-<span class='badge badge-default'>00:00:02:214</span>
+<span class='badge badge-success'>01.30.2023 10:42:18 AM</span>
+<span class='badge badge-danger'>01.30.2023 10:42:20 AM</span>
+<span class='badge badge-default'>00:00:01:863</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,7 +104,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:35:33 PM</td>
+        <td>10:42:20 AM</td>
         <td>
           Test Passed
         </td>
@@ -128,13 +128,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jan 23, 2023 10:35:15 PM</h3>
+<h3>Jan 30, 2023 10:42:10 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jan 23, 2023 10:35:33 PM</h3>
+<h3>Jan 30, 2023 10:42:20 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -204,7 +204,7 @@
 </div></div>
 <script>
 var timeline = {
-"locations":2.214
+"locations":1.863
 };
 </script>
 <div class="row">
